AG-2680 - fixed statusbar content overflowing the container

--- a/packages/ag-grid-community/src/styles/ag-grid.scss
+++ b/packages/ag-grid-community/src/styles/ag-grid.scss
@@ -1126,6 +1126,7 @@ $icons: aggregation arrows asc checkbox-checked-readonly checkbox-checked checkb
 .ag-status-bar {
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
 
     .ag-status-panel {
         display: inline-flex;
